fix mobile overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1235,6 +1235,9 @@ section {
   }
 }
 
+.premium {
+  overflow-x: hidden;
+}
 .premium__container {
   display: flex;
   justify-content: space-between;
