--- a/src/scss/_premium.scss
+++ b/src/scss/_premium.scss
@@ -1,4 +1,6 @@
 .premium {
+    overflow-x: hidden;
+
     &__container {
         display: flex;
         justify-content: space-between;
